# immich-classify

./: .env.example  .gitignore  LICENSE  README.md  image_scores.py  pyproject.toml  requirements.md
src/immich_classify/: __init__.py  __main__.py  cli.py  config.py  database.py  engine.py  immich_client.py  prompt.py  prompt_base.py  prompt_generator.py  vlm_client.py  webapp.py
src/immich_classify/prompts/: __init__.py  classification.py  foreground_people.py
src/immich_classify/static/: app.css  app.js
src/immich_classify/templates/: index.html
tests/: test_cli.py  test_config.py  test_database.py  test_engine.py  test_immich_client.py  test_prompt.py  test_prompt_generator.py  test_vlm_client.py  test_webapp.py
